<resources>
    <string name="app_name">Udep In</string>

    <!-- Login. -->
    <string name="usuario">ID</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>

    <!-- Aula Virtual. -->
    <string name="aula_virtual">Aula Virtual</string>
    <string name="mi_horario">Mi Horario</string>
    <string name="asistencias">Asistencias</string>
    <string name="detalle_asistencias">Detalle Asistencia</string>
    <string name="ficha_matricula">Ficha Matricula</string>
    <string name="estado_cuenta">Estado Cuenta</string>
    <string name="reporte_notas">Reporte Notas</string>
    <string name="mis_cursos">Mis Cursos</string>
    <string name="sílabos">Sílabos</string>
    <string name="mensajeria">Mensajería</string>

    <string name="notificaciones">Notificaciones</string>
    <string name="registro_matricula">Matricula</string>
    <string name="mensajes">Mensajes</string>

    <string name="no_notificaciones">No tiene notificaciones</string>
    <string name="no_reporte">Antes de comenzar, dirigase al modulo de Ficha matricula</string>

    <!--TODO: Remove or change this placeholder text-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">Inicio</string>

    <string name="delete">Delete</string>
    <string name="show">Show</string>

    <string name="default_notification_channel_id">777</string>

    <string name="input_placeholder">Escriba un mensaje</string>
    <string name="inicio">Inicio</string>
    <string name="miperfil">Mi Perfil</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="title_section1">Lunes</string>
    <string name="title_section2">Martes</string>
    <string name="title_section3">Miercoles</string>
    <string name="toolbar_tittle_createaccount">Horario</string>

    <!-- Perfil. -->
    <string name="dni">DNI</string>
    <string name="nro_carne">Carne</string>
    <string name="clave">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>

</resources>
