<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register and Sign in"
        android:visibility="invisible"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/idtxtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#6ef4f4f4"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="78dp"
        android:ems="1"
        android:hint="@string/usuario"
        android:inputType="number"
        android:padding="16dp"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/idtxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#6ef4f4f4"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="78dp"
        android:ems="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#fff" />

    <Button
        android:id="@+id/idbtnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_login_two"
        android:onClick="pantallaAula"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="true"
        android:textColor="#fff" />
</LinearLayout>