<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditPerfilFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/backgrd"
            android:scaleType="centerCrop"
            android:layout_marginBottom="25dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    >
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/txt_otro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textColor="#85ffffff"
                        />
                </LinearLayout>
                <ImageView
                    android:id="@+id/img_foto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_user"
                    android:gravity="bottom"
                    />
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    >
                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:id="@+id/txt_nroCarne"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="---------"
                        android:layout_gravity="center"
                        android:textSize="12dp"
                        android:textColor="#ffffff"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtmail"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="left"/>
            <EditText
                android:layout_weight="1"
                android:id="@+id/idtxtmail"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#1b193b"
                android:hint=""
                android:textColor="#181737"
                android:maxLength="20"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="right"
                />
        </LinearLayout>
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtclave"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clave"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="left"
                />
            <EditText
                android:layout_weight="1"
                android:id="@+id/idtxtclave"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#1b193b"
                android:inputType="textPassword"
                android:hint="**********"
                android:textColor="#181737"
                android:maxLength="15"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="right"
                />
        </LinearLayout>
        <!--
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/fbook"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Facebook"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="left"
                />
            <!com.rey.material.widget.Switch!>
            <Switch
                android:layout_weight="1"
                android:id="@+id/switcch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="left"
                />
        </LinearLayout>
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtdireccion"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="left"
                />
            <EditText
                android:layout_weight="1"
                android:id="@+id/idtxtdireccion"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:textColorHint="#181737"
                android:textColor="#181737"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="right"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/txttelefono"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="left"
                />
            <EditText
                android:layout_weight="1"
                android:id="@+id/idtxttelefono"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint=""
                android:textColorHint="#181737"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="right"
                />
        </LinearLayout>
    </LinearLayout>


    <io.github.yavski.fabspeeddial.FabSpeedDial
        android:id="@+id/fabSpeedDial_EditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        app:fabGravity="top_end"
        app:fabMenu="@menu/menu_perfil"
        app:miniFabBackgroundTint="@color/white"
        app:miniFabDrawableTint="?attr/colorPrimaryDark"
        app:miniFabTitleTextColor="?attr/colorPrimaryDark" />

</RelativeLayout>